examples/test/testpolicy1906.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1906
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key47: value41
      key49: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
          key11: value41
      podSelector:
        matchLabels:
          key38: value24
          key7: value1
